objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Change Request Process</fullName>
        <description>Case statuses for AW Computing org change requests</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Awaiting Approval</fullName>
        </values>
        <values>
            <fullName>Change Requested</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Designed</fullName>
        </values>
        <values>
            <fullName>Implemented</fullName>
        </values>
        <values>
            <fullName>Not Approved</fullName>
        </values>
        <values>
            <fullName>Tested</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Product Support Process</fullName>
        <description>Case statuses for product support cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Bug Fixed</fullName>
        </values>
        <values>
            <fullName>Bug Logged</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Bug_Number__c</fullName>
        <description>Engineering bug number for this case.</description>
        <inlineHelpText>Enter the engineering bug number associated with this case.</inlineHelpText>
        <label>Bug Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>Product category associated with the customer’s issue.</description>
        <inlineHelpText>Choose which product category is causing the customer’s issue.</inlineHelpText>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Desktops</fullName>
                </value>
                <value>
                    <fullName>Laptops</fullName>
                </value>
                <value>
                    <fullName>Networking Equipment</fullName>
                </value>
                <value>
                    <fullName>Printers</fullName>
                </value>
                <value>
                    <fullName>Servers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Solution__c</fullName>
        <description>Proposed solution for the change request.</description>
        <inlineHelpText>Enter a proposed solution for the AW Computing org change request.</inlineHelpText>
        <label>Proposed Solution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Requirements__c</fullName>
        <description>Detailed requirements for the change request.</description>
        <inlineHelpText>Enter the detailed requirements for the AW Computing org change request.</inlineHelpText>
        <label>Requirements</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>Change_Request</fullName>
        <active>true</active>
        <businessProcess>Change Request Process</businessProcess>
        <description>Use to create AW Computing org change requests.</description>
        <label>Change Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Support</fullName>
        <active>true</active>
        <businessProcess>Product Support Process</businessProcess>
        <description>Use to create product support cases.</description>
        <label>Product Support</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>